# samlb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
_cpp/bindings/: pybind_module.cpp
_cpp/classification/: efdt.cpp  efdt.h  hoeffding_tree.cpp  hoeffding_tree.h  knn_cls.cpp  knn_cls.h  logistic_regression.cpp  logistic_regression.h  naive_bayes.cpp  naive_bayes.h  passive_aggressive_cls.cpp  passive_aggressive_cls.h  perceptron.cpp  perceptron.h  sgt.cpp  sgt.h  softmax.cpp  softmax.h
_cpp/core/: gaussian_estimator.h  hoeffding_bound.h  sliding_window.h
_cpp/regression/: bayesian_linear_reg.cpp  bayesian_linear_reg.h  hoeffding_tree_reg.cpp  hoeffding_tree_reg.h  knn_reg.cpp  knn_reg.h  linear_regression.cpp  linear_regression.h  passive_aggressive_reg.cpp  passive_aggressive_reg.h
examples/: run_benchmark.py  run_regression.py
samlb/: __init__.py
samlb/algorithms/: __init__.py
samlb/algorithms/classification/: __init__.py
samlb/algorithms/regression/: __init__.py
samlb/benchmark/: __init__.py  suite.py
samlb/datasets/: __init__.py
samlb/datasets/classification/: adult.npz  covertype.npz  electricity.npz  moving_squares.npz  new_airlines.npz  nomao.npz  shuttle.npz  synth_RandomRBFDrift.npz  synth_agrawal.npz
samlb/datasets/regression/: House8L.npz  MetroTraffic.npz  ailerons.npz  bike.npz  california_housing.npz  cps88wages.npz  diamonds.npz  elevators.npz  fifa.npz  fried.npz  kings_county.npz
samlb/evaluation/: __init__.py  evaluator.py  metrics.py  results.py
samlb/framework/: __init__.py
samlb/framework/base/: __init__.py  _cpp_wrappers.py  _framework.py
samlb/framework/classification/: __init__.py  shared_config.py
samlb/framework/classification/asml/: __init__.py  config.py  helper.py  model.py  search.py
samlb/framework/classification/autoclass/: __init__.py  config.py  model.py
samlb/framework/classification/eaml/: __init__.py  config.py  model.py
samlb/framework/classification/oaml/: __init__.py  config.py  model.py
samlb/framework/regression/: __init__.py
samlb/framework/regression/asml/: __init__.py  config.py  helper.py  model.py  search.py
samlb/framework/regression/chacha/: __init__.py  model.py
samlb/framework/regression/eaml/: __init__.py  config.py  model.py
tests/: conftest.py  test_benchmark_core_fixes.py  test_benchmark_progress.py  test_benchmark_suite_results_api.py  test_classification.py  test_regression.py  test_regression_chacha.py  test_run_benchmark_parallel_utils.py
